Adjust overflow view for lists

--- a/src/template.html
+++ b/src/template.html
@@ -34,6 +34,26 @@
             <li class="todo-item">Go gym</li>
             <li class="todo-item">Do homework</li>
             <li class="todo-item">Go to sleep</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
+            <li class="todo-item">test</li>
           </ul>
         </div>
       </main>
