--- a/src/template.html
+++ b/src/template.html
@@ -31,29 +31,66 @@
         <h2 id="project-name">Project Name</h2>
         <div id="todo-wrapper">
           <ul id="todo-list">
-            <li class="todo-item">Go gym</li>
-            <li class="todo-item">Do homework</li>
-            <li class="todo-item">Go to sleep</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
-            <li class="todo-item">test</li>
+            <li class="todo-item">
+              <input type="checkbox" class="is-complete" />
+              <div class="title">Go gym</div>
+              <div class="todo-details">
+                <div class="days-till-due">3 days</div>
+                <div class="priority">High</div>
+              </div>
+              <div class="actions">
+                <button class="duedate">
+                  <i class="fas fa-calendar-days"></i>
+                  <span>2020-10-10</span>
+                </button>
+                <button class="edit-todo">
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button class="delete-todo">
+                  <i class="fas fa-trash-can"></i>
+                </button>
+              </div>
+            </li>
+            <li class="todo-item">
+              <input type="checkbox" class="is-complete" />
+              <div class="title">HomeWork</div>
+              <div class="todo-details">
+                <div class="days-till-due">1 day</div>
+                <div class="priority">Low</div>
+              </div>
+              <div class="actions">
+                <button class="duedate">
+                  <i class="fas fa-calendar-days"></i>
+                  <span>2020-10-10</span>
+                </button>
+                <button class="edit-todo">
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button class="delete-todo">
+                  <i class="fas fa-trash-can"></i>
+                </button>
+              </div>
+            </li>
+            <li class="todo-item">
+              <input type="checkbox" class="is-complete" />
+              <div class="title">Interview</div>
+              <div class="todo-details">
+                <div class="days-till-due">2 days</div>
+                <div class="priority">High</div>
+              </div>
+              <div class="actions">
+                <button class="duedate">
+                  <i class="fas fa-calendar-days"></i>
+                  <span>2020-10-10</span>
+                </button>
+                <button class="edit-todo">
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button class="delete-todo">
+                  <i class="fas fa-trash-can"></i>
+                </button>
+              </div>
+            </li>
           </ul>
         </div>
       </main>
