Implement dynamic rendering of page

--- a/src/template.html
+++ b/src/template.html
@@ -6,32 +6,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="container">
-      <header>
-        <h1>Todo List</h1>
-      </header>
-      <aside id="sidebar">
-        <section id="default-section">
-          <ul class="sidebar-list">
-            <li>Inbox</li>
-            <li>Today</li>
-            <li>Upcoming</li>
-          </ul>
-        </section>
-        <section id="project-section"></section>
-      </aside>
-      <main id="content">
-        <h2 id="project-name">Project Name</h2>
-        <div id="todo-wrapper">
-          <ul id="todo-list"></ul>
-        </div>
-      </main>
-      <footer>
-        <p>Copyright © 2023 JamieYau</p>
-        <a href="https://github.com/JamieYau">
-          <i class="fab fa-github fa-fade"></i>
-        </a>
-      </footer>
-    </div>
+    <div id="container"></div>
   </body>
 </html>
